Fri Mar 26 03:09:30 2010  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_obj_singleton_class): new method
	  Kernel#singleton_class.  [ruby-core:21702]

Thu Mar 25 03:52:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/charset_alias.rb: update of URL.  [ruby-dev:38360]

Wed Mar 24 18:16:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LDSHARED, CPP): keep $(CC).  [ruby-core:28912]

Mon Mar 22 19:32:34 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (Date#>>): fixed.  [ruby-core:28011]

Sat Mar 20 12:30:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib: fixed typo.  a patch by Sho Hashimoto in [ruby-dev:40716].

Fri Mar 19 17:12:34 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.h (RSTRING_*, RARRAY_*, RREGEXP_*, RSTRUCT_*, RBIGNUM_*):
	  ensure non-lvalue for compatibility with 1.9.

Thu Mar 18 13:51:22 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c, eval.c, process.c: add linux to r26371's condition.
	  patched by Motohiro KOSAKI [ruby-core:28151]

Wed Mar 17 06:39:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.h (rb_warning, rb_sys_warning): fixed typo in rdoc.
	  [ruby-core:28696]

Sat Mar 13 11:06:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (numchar_getc): get rid of buffer
	  overflow.  [ruby-dev:40606]

Sat Mar 13 10:03:52 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: fix [Bug #2840] Tk doesn't built in mingw.

Wed Mar 10 16:12:21 2010  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (rb_f_loop): Return an enumerator if no block is given.

Tue Mar  9 22:58:59 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_config.c: defined own IMPLEMENT_LHASH_DOALL_ARG_FN_098
	  macro according to IMPLEMENT_LHASH_DOALL_ARG_FN in OpenSSL 0.9.8m.
	  OpenSSL 1.0.0beta5 has a slightly different definiton so it could
	  be a temporal workaround for 0.9.8 and 1.0.0 dual support.
