@@ -521,6 +521,7 @@ VALUE rb_const_get _((VALUE, ID));
 VALUE rb_const_get_at _((VALUE, ID));
 VALUE rb_const_get_from _((VALUE, ID));
 void rb_const_set _((VALUE, ID, VALUE));
+VALUE rb_const_remove _((VALUE, ID));
 VALUE rb_mod_constants _((VALUE));
 VALUE rb_mod_const_missing _((VALUE,VALUE));
 VALUE rb_cvar_defined _((VALUE, ID));
